bin/tests/errors_lexer/lexer/lex_err_too_many_char_char.swg
#global fileprivate

'ab' // swc-expected-error {{lex_err_too_many_char_char}}
